fix(service): 채팅방 찾기 쿼리 메서드 수정